# RateMyProfessor2

./: .replit  package-lock.json  package.json  pyproject.toml  reviews.json  setup_rag.py
app/: layout.tsx  navbar.tsx  page.tsx
app/api/chat/: route.ts
app/sign-in/[[...sign-in]]/: page.tsx
app/sign-up/[[...sign-up]]/: page.tsx
components/: starbg.tsx
styles/: Home.module.css  globals.css
